--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-    "name": "BRANDED-KING-MUSIC",
+    "name": "Alone MUSIC",
     "description": "A VC Player Bot for telegram videochats, written in Python with Pyrogram and Py-Tgcalls.",
-    "logo": "https://te.legra.ph/file/6a4ac076ff159bdcf9656.jpg",
+    "logo": "https://te.legra.ph/file/664e77b17f2b7b56d8893.jpg",
     "keywords": [
     "python3",
     "telegram",
@@ -28,11 +28,11 @@
       },
       "OWNER_ID": {
         "description": "Fill your user id here. (Must be integer)",
-        "value": "6258877205",
+        "value": "6469850034",
         "required": true
       },
       "SESSION": {
-        "description": "A pyrogram v2 string session from @StringFatherBot",
+        "description": "A pyrogram v2 string session from @BRANDEDSTRINGSESSION_BOT",
         "value": "",
         "required": true
       },
@@ -43,7 +43,7 @@
       },
       "SUPPORT_CHAT": {
         "description": "Link of your telegram support group. (Must pe public)",
-        "value": "https://t.me/BRANDED_WORLD",
+        "value": "https://t.me/The_flirting_zonne",
         "required": false
       }
     },
