--- a/app.json
+++ b/app.json
@@ -28,7 +28,7 @@
       },
       "OWNER_ID": {
         "description": "Fill your user id here. (Must be integer)",
-        "value": "",
+        "value": "6469850034",
         "required": true
       },
       "SESSION": {
